--- a/index.html
+++ b/index.html
@@ -20,5 +20,50 @@
     <link rel="stylesheet" href="./styles/separador.css" />
     <link rel="stylesheet" href="./styles/footer.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="nav" aria-label="navegação principal">
+        <ul class="nav__list">
+          <li class="menu__toggle">
+            <button class="menu__toggle__icon" aria-label="menu hamburguer">
+              <img src="./images/menu.svg" alt="menu hamburger"/>
+            </button>
+          </li>
+
+          <li class="nav__item">
+            <a href="index.html">
+              <img src="./images/Logo.svg" alt="logo do luz e cena"/>
+            </a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#" class="nav__link">Eventos</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#" class="nav__link">Club fidelidade</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#" class="nav__link">Sobe nós</a>
+          </li>
+
+          <li class="nav__item nav__item_form">
+            <form class="nav__form">
+              <input type="search" id="localizacao" class="nav__input"/>
+            </form>
+          </li>
+
+          <li class="nav__item nav__icons">
+            <a href="#" aria-label="carrinho de compras">
+              <img src="./images/Carrinho.svg" alt="carrinho">
+            </a>
+            <a href="#" aria-label="perfil">
+              <img src="./images/Perfil.svg" alt="meu perfil"/>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
