Seção banner - html, css

--- a/index.html
+++ b/index.html
@@ -65,5 +65,13 @@
         </ul>
       </nav>
     </header>
+
+    <section class="banner">
+      <div class="banner__container">
+        <h2 class="banner__titulo">
+          Onde a realidade <br/><span class="banner__titulo-destaque">encontra a fantasia!</span>
+        </h2>
+      </div>
+    </section>
   </body>
 </html>
