Seção Em cartaz - html, css

--- a/index.html
+++ b/index.html
@@ -73,5 +73,22 @@
         </h2>
       </div>
     </section>
+
+    <section class="cartaz">
+      <ul class="menu_list" role="tablist" aria-label="navegação de categorias">
+        <li class="menu-list__item menu-list__item-ativo" role="tab" aria-selected="true">
+          Em cartaz
+        </li>
+        <li class="menu-list__item" role="tab">
+          Em breve
+        </li>
+      </ul>
+
+      <form>
+        <input type="search" class="cartaz__pesquisa" placeholder="Digite sua busca" aria-label="campo de busca de filme"/>
+      </form>
+
+      <h2 class="cartaz__titulo">Em cartaz</h2>
+    </section>
   </body>
 </html>
