Ajuste na lista - html

--- a/index.html
+++ b/index.html
@@ -247,25 +247,25 @@
 
         <li class="filme-list__item">
           <img
-            src="./images/poster/oNexusDoTempo.png"
+            src="./images/poster/amigoDaSombra.png"
             alt="O nexus do tempo"
             class="filme-list__imagem"
           />
           <div class="filme-list__container">
-            <h3 class="film-list__item-titulo">O nexus do tempo</h3>
+            <h3 class="film-list__item-titulo">Amigo da Sombra</h3>
             <div class="filme-list__descricao">
               <div class="filme-list__linha">
                 <p class="filme-list__descricao-tipo">Suspense</p>
-                <p class="filme-list__descricao-dimensao">2D</p>
+                <p class="filme-list__descricao-dimensao">3D</p>
               </div>
               <div class="filme-list__linha">
-                <p class="filme-list__descricao-duracao">110 minutos</p>
+                <p class="filme-list__descricao-duracao">105 minutos</p>
                 <p class="filme-list__descricao-idade">16 anos</p>
               </div>
             </div>
           </div>
         </li>
-        
+
       </ul>
     </section>
   </body>
