Combo banner section - html, css

--- a/index.html
+++ b/index.html
@@ -268,5 +268,11 @@
 
       </ul>
     </section>
+
+    <section class="combo">
+      <div class="combo__container">
+        <h2 class="combo__titulo">Combo <span class="combo__titulo-destaque">Draton's Ascent</span></h2>
+      </div>
+    </section>
   </body>
 </html>
