--- a/index.html
+++ b/index.html
@@ -274,5 +274,15 @@
         <h2 class="combo__titulo">Combo <span class="combo__titulo-destaque">Draton's Ascent</span></h2>
       </div>
     </section>
+
+    <section class="newsletter">
+      <div class="newsletter__container">
+        <h2 class="newsletter__titulo" id="newsletter-titulo">Inscreva-se para ganhar descontos!</h2>
+        <form class="newsletter__formulario" aria-labelledby="newsletter-titulo">
+          <input type="email" placeholder="Digite seu melhor e-mail" class="newsletter__input"/>
+          <button type="submit" class="newsletter__button">Inscrever</button>
+        </form>
+      </div>
+    </section>
   </body>
 </html>
