--- a/index.html
+++ b/index.html
@@ -284,5 +284,67 @@
         </form>
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="footer__columns">
+
+        <div class="footer__column-logo"> <!--1ª coluna-->
+          <img src="./images/Logo-white.svg" alt="logo luz e cena" class="footer__column-image"/>
+          <h4 class="footer__column-text">Onde a realidade encontra a fantasis</h4>
+        </div>
+
+        <div class="footer__column"> <!--2ª coluna-->
+          <h4 class="footer__column-titulo">Funcionamento</h4>
+          <ul class="footer__column-list">
+            <li>
+              <p>Segunda a sexta - 16 às 00h</p>
+            </li>
+            <li>
+              <a href="mailto:ola@luzecena.com.br">ola@luzecena.com.br</a>
+            </li>
+            <li>
+              <a href="TEL:0800541230">0800 541 320</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__column"> <!--3ª coluna-->
+          <h4 class="footer__column-titulo">Institucional</h4>
+          <ul class="footer__column-list">
+            <li>
+              <a href="#">Sobre nós</a>
+            </li>
+            <li>
+              <a href="#">Para empresas</a>
+            </li>
+            <li>
+              <a href="#">Club fidelidade</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__column"> <!--4ª coluna-->
+          <h4 class="footer__column-titulo">Siga nossas redes</h4>
+          <ul class="footer__column-list footer__column-list-redes-sociais">
+            <li>
+              <a href="#">
+                <img src="./images/Whatsapp.svg" alt="Whatsapp"/>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/Instagram.svg" alt="Instagram"/>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/Tiktok.svg" alt="Tiktok"/>
+              </a>
+            </li>
+          </ul>
+        </div>
+        
+      </div>
+    </footer>
   </body>
 </html>
